# safari-project

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
Model/: Poacher.py
saves/: fff.json  hard.json  helo.json
src/my_safari_project/: Tourist.py  main.py
src/my_safari_project/Model/: Animal.py  Board.py  Capital.py  Carnivore.py  Field.py  Herbivore.py  Jeep.py  Ranger.py  Road.py  Tourist.py  animal.py  carnivore.py  plant.py  poacher.py  pond.py  ranger.py  timer.py  tourist.py
src/my_safari_project/audio/: __init__.py  audio_manager.py  sound_effects.py  sound_events.py
src/my_safari_project/control/: animal_ai.py  game_controller.py  gamecontroller.py  tourist_ai.py  wildlife_ai.py
src/my_safari_project/model/: animal.py  board.py  capital.py  carnivore.py  field.py  herbivore.py  jeep.py  plant.py  poacher.py  pond.py  ranger.py  road.py  timer.py  timespeed.py  tourist.py
src/my_safari_project/view/: BoardGUI.py  board_gui.py  boardgui.py  gamegui.py  main_menu_gui.py
tests/: test.py  test_animal_ai.py  test_animal_logic.py  test_board_and_jeep.py  test_board_logic.py  test_game_controller.py  test_gameplay_basic.py  test_gameplay_extras.py  test_jeep_behavior.py  test_poacher_ranger.py  test_road_and_field.py  test_timer_and_capital.py  test_tourist_ai.py
